# mpu6500-rs

./: Cargo.toml  README.md
examples/: usage_demo.rs
src/: error.rs  lib.rs  numeric.rs  util.rs
src/config/: builder.rs  clock.rs  config_struct.rs  interrupt.rs  mod.rs  scale.rs
src/driver/: calibrate.rs  config_ops.rs  fifo.rs  interrupt.rs  mod.rs  power.rs  read.rs  reg_rw.rs
src/register/: mod.rs
