[package]
name = "mpu6500"
version = "0.1.0"
authors = ["Alddp <1906701331@qq.com>"]
edition = "2024"
description = "高效、易用的 MPU6500 六轴传感器 Rust 驱动库，支持 async/await"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alddp/mpu6500"
documentation = "https://docs.rs/mpu6500"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpu6500", "imu", "embedded-hal", "async"]

[dependencies]
# embedded-hal = "0.2.7"

embedded-hal-async = { version = "1.0.0" }
embassy-time = { version = "0.4.0" }
embedded-hal = { version = "1.0.0" }
libm = "0.2.15"
